# slingshot

./: README.md  pyproject.toml  requirements.txt
src/slingshot_edemoney/: slingshot.py
