[project]
name = "slingshot_edemoney"
version = "0.0.2"
authors = [
  { name="Eric DeMoney", email="eric@demoney.netj" },
]
description = "PyCharm-like remote interpreter implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
slingshot = "slingshot_edemoney.slingshot:main"

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"
